force-app/main/default/objects/Quote/fields/Accepted_Flag__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Flag__c</fullName>
    <description>Helper for Quote Acceptance Rate reporting: 1 when Status is Accepted, else 0.</description>
    <formula>IF(ISPICKVAL(Status, &quot;Accepted&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accepted Flag</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>