force-app/main/default/objects/Quote/fields/Client_Decline_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Decline_Date__c</fullName>
    <description>Date and time when the client declined the quote via DocuSign electronic signature</description>
    <inlineHelpText>Automatically populated when the client declines the quote in DocuSign. Not to be confused with manager rejection during internal approval workflow.</inlineHelpText>
    <label>Client Decline Date</label>
    <type>DateTime</type>
</CustomField>