force-app/main/default/objects/Quote/fields/Client_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Client_Decline_Reason__c</fullName>
    <description>Reason provided by the client when declining the quote in DocuSign</description>
    <inlineHelpText>Automatically populated from the DocuSign decline reason. Helps the commercial understand the rejection motive.</inlineHelpText>
    <label>Client Decline Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>