force-app/main/default/objects/Quote/validationRules/Require_Valid_Post_Draft_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Valid_Post_Draft_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status),
    ISPICKVAL(PRIORVALUE(Status), &quot;Draft&quot;),
    OR(
        ISPICKVAL(Status, &quot;Approved&quot;),
        ISPICKVAL(Status, &quot;Rejected&quot;),
        ISPICKVAL(Status, &quot;Presented&quot;),
        ISPICKVAL(Status, &quot;Accepted&quot;),
        ISPICKVAL(Status, &quot;Denied&quot;)
    )
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Quote must be submitted for &apos;Needs Review&apos; before changing to this status.</errorMessage>
</ValidationRule>